[project]
name = "dhybridrpy"
version = "v1.6"
description = "A Python package to easily read input + output data from dHybridR."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.8.0,<=3.15.1; python_version < '3.12'",
    "h5py>=3.11.0,<=3.15.1; python_version >= '3.12' and python_version < '3.13'",
    "h5py>=3.14.0,<=3.15.1; python_version >= '3.13' and python_version < '3.14'",
    "h5py>=3.15.1,<=3.15.1; python_version >= '3.14'",
    "matplotlib>=3.7.5,<=3.10.8; python_version < '3.13'",
    "matplotlib>=3.9.4,<=3.10.8; python_version >= '3.13' and python_version < '3.14'",
    "matplotlib>=3.10.8,<=3.10.8; python_version >= '3.14'",
    "numpy>=1.24.4,<=2.4.2; python_version < '3.12'",
    "numpy>=1.26.0,<=2.4.2; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=2.1.0,<=2.4.2; python_version >= '3.13' and python_version < '3.14'",
    "numpy>=2.4.2,<=2.4.2; python_version >= '3.14'",
    "f90nml>=1.4.4,<=1.5",
    "dask>=2023.5.0,<=2026.1.2; python_version < '3.13'",
    "dask>=2024.8.0,<=2026.1.2; python_version >= '3.13'"
]
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.8.3",
    "ipython>=8,<10",
    "nbconvert>=7,<8"
]

[project.urls]
Homepage = "https://github.com/AstroplasmasUChicago/dhybridrpy"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dhybridrpy"]
